--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
     {
       "name": "RuiBorda",
       "email": "bordarui@gmail.com"
+    },
+    {
+      "name": "anaihcabezas",
+      "email": "anaihcabezazloayza@gmail.com"
     }
   ],
   "minimum-stability": "dev",
